<resources>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="close">Close</string>
    <string name="cancel">Cancel</string>
    <string name="app_name">MediTrak</string>
    <string name="edit">Edit</string>
    <string name="submit">Submit</string>
    <string name="save_changes">Save Changes</string>
    <string name="save">Save</string>
    <string name="you">You</string>
    <string name="your">Your</string>
    <string name="ok">OK</string>
    <string name="delete">Delete</string>
    <string name="i_agree">I agree</string>
    <string name="select_all">Select All</string>
    <string name="stop">Stop</string>
    <string name="every">Every</string>
    <string name="clear">Clear</string>
    <string name="apply">Apply</string>
    <string name="before">Before</string>
    <string name="after">After</string>
    <string name="on">On</string>
    <string name="invalid_value">Invalid value entered</string>
    <string name="must_be_positive_int">Value must be a positive integer</string>
    <string name="val_too_big">Provided value is too big</string>
    <string name="cannot_exceed_50">Provided value cannot exceed 50</string>
    <string name="must_be_greater_than_0">Provided value must be greater than 0</string>
    <string name="provided_name_invalid">Provided name is invalid</string>
    <string name="err_provide_name">Please provide a name</string>
    <string name="err_enter_dosage">Please enter a dosage</string>
    <string name="err_units_for_med">Please enter the units for this medication</string>
    <string name="err_select_frequency">Please select a frequency type</string>
    <string name="err_select_time">Please select a time</string>
    <string name="err_select_start_date">Please select a start date.</string>
    <string name="err_enter_num_timers_per_day">Please enter the number of times this medication is taken in a day</string>
    <string name="err_enter_med_freq">Please enter how often the medication is taken.</string>
    <string name="err_enter_time_unit">Please select a time unit.</string>
    <string name="err_name_for_med">Please enter a name for this medication</string>
    <string name="err_missing_file_name">Missing file name</string>
    <string name="err_file_must_be_json">Export file must have a .json extension</string>
    <string name="err_required">Required</string>
    <string name="err_file_access_denied">Access to this file was denied</string>
    <string name="date_format">Mmm dd, yyyy</string>
    <string name="time_format_hh_mm_aa">hh:mm aa</string>
    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="minutes">Minutes</string>
    <string name="hours">Hours</string>
    <string name="days">Days</string>
    <string name="weeks">Weeks</string>
    <string name="no_medications_found">No medications found</string>
    <string name="med_schedule">Medication Schedule</string>
    <string name="no_meds_for_day">No medications for %1$s</string>
    <string name="cannot_take_more_than_hours">Cannot take medications more than %1$d hours in advance</string>
    <string name="as_needed_dose">As Needed Dose</string>
    <string name="welcome">Welcome to MediTrak!</string>
    <string name="warranty_info">
        This application is meant to assist in keeping track of your medications. It is not intended
        to provide medical advice and no information provided by this application should be misconstrued
        as such. The creators of this application are not responsible for any missed
        doses of your medications for any reason. If you require medical assistance, please contact a medical professional.
        By using this application, you are agreeing to the aforementioned terms as well as those of the GPL version 2.0 license under
        which it is released. \n\n\n\n
        This application is released under the GNU Public License Version 2, see below for more details:
    </string>
    <string name="permission_needed">Permission Needed</string>
    <string name="exact_alarm_permission_request"><![CDATA[MediTrak needs access to Alarms & Reminders to ensure reminders ring at the desired time.\n\nAllow MediTrak to set alarms and reminders so you can receive timely notifications.]]></string>
    <string name="add_medication">Add Medication</string>
    <string name="edit_medication">Edit Medication</string>
    <string name="delete_medication">Delete Medication</string>
    <string name="note_timestamp">Date: %1$s at: %2$s</string>
    <string name="note_edit_timestamp">Edited: %1$s at: %2$s</string>
    <string name="patient_changed">Patient changed from %1$s to %2$s\n</string>
    <string name="name_changed">Name changed from %1$s to %2$s\n</string>
    <string name="removed_alias">Alias %1$s removed\n</string>
    <string name="added_alias">Alias %1$s added\n</string>
    <string name="changed_alias">Alias changed from %1$s to %2$s\n</string>
    <string name="changed_dosage">Dosage changed from %1$s to %2$s\n</string>
    <string name="frequency_changed">Frequency changed from %1$s to %2$s\n</string>
    <string name="times_per">Times per</string>
    <string name="patientIsMe">Me</string>
    <string name="patient">Patient</string>
    <string name="other">Other</string>
    <string name="name">Name</string>
    <string name="medication_name">Medication Name</string>
    <string name="medication_dosage">Dosage</string>
    <string name="medication_frequency">Frequency</string>
    <string name="taken_every">Taken Every</string>
    <string name="units">Dosage Unit</string>
    <string name="taken">Taken</string>
    <string name="frequency">Frequency</string>
    <string name="multiple_times_per_day">Multiple Times per Day</string>
    <string name="as_needed">As Needed</string>
    <string name="daily">Daily</string>
    <string name="weekly">Weekly</string>
    <string name="monthly">Monthly</string>
    <string name="medication_name_amp_dosage"><![CDATA[Medication Name & Dosage]]></string>
    <string name="who_takes_this_medication">Who takes this medication?</string>
    <string name="someone_else">Someone else</string>
    <string name="what_is_the_medication_s_name_amp_how_much_is_taken"><![CDATA[What is the medication\'s name & how much is taken?]]></string>
    <string name="alias_for_notifications">Alias for notifications</string>
    <string name="how_often_is_the_medication_taken">How often is the medication taken?</string>
    <string name="start_date">Start Date</string>
    <string name="taken_at">Taken at</string>
    <string name="unit_of_time">Unit of Time</string>
    <string name="custom_frequency">Custom Frequency</string>
    <string name="times_per_day">Times per day</string>
    <string name="starting">Starting:</string>
    <string name="alias_for_medication">Alias for medication</string>
    <string name="yourMedications">Your Medications:</string>
    <string name="no_notes_for_this_medication">No notes for this medication</string>
    <string name="unitExample">Ex. mg, g, drops</string>
    <string name="patient_name">Patient Name:</string>
    <string name="no_alias">No alias</string>
    <string name="at">at</string>
    <string name="apply_retroactive">Apply Changes Retroactively</string>
    <string name="retroactive_warning">Warning: Changes to frequency may cause previously taken doses to no longer be visible in the schedule.</string>
    <string name="would_like_apply_retroactively">Changes to dosage and frequency can be applied retroactively as of the previous change. Would you like to apply these changes retroactively?</string>
    <string name="instructions">Instructions</string>
    <string name="instructions_optional">Instructions (Optional)</string>
    <string name="instructions_added">Added instructions: %1$s</string>
    <string name="dose_limit_added">Added dose limit: %1$s</string>
    <string name="end_date_added">Added end date: %1$s</string>
    <string name="new_quantity">New quantity: %1$d</string>
    <string name="remaining_doses">Remaining Doses</string>
    <string name="end_date">End Date</string>
    <string name="set_limit_by">Set limit by</string>
    <string name="out_of_doses">Out of Doses</string>
    <string name="none">None</string>
    <string name="quantity_optional">Quantity (Optional)</string>
    <string name="change_amount">Change Quantity</string>
    <string name="adjust_quantity">Adjust Quantity</string>
    <string name="notify_when_remaining">Notify when remaining</string>
    <string name="notify_when_remaining_added">Notify when remaining set to: %1$s</string>
    <string name="low_doses_warning">Supply of %1$s is low. %2$d doses remaining.</string>
    <string name="my_medications">My Medications</string>
    <string name="med_name">Medication name: %1$s</string>
    <string name="dosage">Dosage: %1$s %2$s</string>
    <string name="taken_daily_at">Taken daily at </string>
    <string name="taken_every_lbl">Taken every\u0020</string>
    <string name="alias_lbl">Alias</string>
    <string name="taken_since">Taken since: %1$s</string>
    <string name="taken_as_needed">Taken as needed.</string>
    <string name="active">Active</string>
    <string name="inactive">Inactive</string>
    <string name="notes">Notes</string>
    <string name="add_note">Add Note</string>
    <string name="edit_note">Edit Note</string>
    <string name="settings">Settings</string>
    <string name="options">Options</string>
    <string name="license">License</string>
    <string name="purpose">MediTrak is a free and open source application designed to help you keep track of your medications, so you can more easily answer the question \"did I take my medication yesterday?\"</string>
    <string name="copyright">Copyright © 2022–2026 Adam Guidarini</string>
    <string name="licenseInfo">MediTrak is free software and may be redistributed and/or modified under the terms of the GNU General Public License as published by the Free Software Foundation, either version 2 or (at your option) later.</string>
    <string name="warranty">
        This program is free software; you can redistribute it and/or
        modify it under the terms of the GNU General Public License
        as published by the Free Software Foundation; either version 2
        of the License, or (at your option) any later version.

        This program is distributed in the hope that it will be useful,
        but WITHOUT ANY WARRANTY; without even the implied warranty of
        MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
        GNU General Public License for more details.
    </string>
    <string name="copyOfGPL2">
        You should have received a copy of the GNU General Public License
        along with this program; if not, see https://www.gnu.org/licenses/.
    </string>
    <string name="delete_all">Delete All</string>
    <string name="pause_medication">Pause Medication</string>
    <string name="resume_medication">Resume Medication</string>
    <string name="enable_notifications">Enable Notifications</string>
    <string name="disable_time_before_dose_requirement">Disable time in advance limit</string>
    <string name="number_of_hours_before_dose_can_be_taken">Limit before which medication cannot be taken:</string>
    <string name="export_directory">Export Directory</string>
    <string name="export_file_name">Export File Name</string>
    <string name="scheduled">Scheduled</string>
    <string name="dosage_hist">Dosage</string>
    <string name="filter">Filter</string>
    <string name="export_csv">Export CSV</string>
    <string name="no_records">No Records</string>
</resources>